--- a/pg/data/pg_hba.conf
+++ b/pg/data/pg_hba.conf
@@ -1,6 +1,7 @@
-#TYPE   DATABAASE USER      ADDRESS       METHOD
+#TYPE   DATABAASE       USER      ADDRESS        METHOD
 
-local   all       postgres                peer
-local   all       all                     md5
-local   all       all      127.0.0.1/32   md5
-local   all       all      ::1/128        md5
+local   all             postgres                 peer
+local   all             all                      md5
+local   all             all       127.0.0.1/32   md5
+local   all             all       ::1/128        md5
+host    app_production  app       192.168.33.10  md5
